--- a/tweet-front/angular.json
+++ b/tweet-front/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "tweet-front": {
+    "mechanikal-front": {
       "root": "",
       "sourceRoot": "src",
       "projectType": "application",
@@ -13,7 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/tweet-front",
+            "outputPath": "dist/mechanikal-front",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -57,11 +57,11 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "tweet-front:build"
+            "browserTarget": "mechanikal-front:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "tweet-front:build:production"
+              "browserTarget": "mechanikal-front:build:production"
             }
           }
         },
@@ -102,7 +102,7 @@
         }
       }
     },
-    "tweet-front-e2e": {
+    "mechanikal-front-e2e": {
       "root": "e2e/",
       "projectType": "application",
       "prefix": "",
@@ -111,11 +111,11 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "tweet-front:serve"
+            "devServerTarget": "mechanikal-front:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "tweet-front:serve:production"
+              "devServerTarget": "mechanikal-front:serve:production"
             }
           }
         },
