--- a/server/DataCore/DataCore.csproj
+++ b/server/DataCore/DataCore.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
     
     <ItemGroup>
+        <PackageReference Include="MySql.Data.EntityFrameworkCore" Version="8.0.15" />
         <PackageReference Include="System.Data.SqlClient" Version="4.6.0" />
     </ItemGroup>
 
